--- a/index.html
+++ b/index.html
@@ -6,27 +6,48 @@
   <link rel='stylesheet' href='https://icono-49d6.kxcdn.com/icono.min.css'><link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="audio-player" id="1">
-  <div class="controls">
-    <div class="info">
-      <div class="play-container">
-        <div class="toggle-play play"></div>
+  <div class="audio-player" data-song="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3">
+    <div class="controls">
+      <div class="info">
+        <div class="play-container">
+          <div class="toggle-play play"></div>
+        </div>
+        <div class="trackinfo">
+          <div class="name">Music Song</div>
+          <div class="subtitle">This is subtitle</div>
+        </div>
       </div>
-      <div class="trackinfo">
-        <div class="name">Music Song</div>
-        <div class="subtitle">This is subtitle</div>
+      <div class="time">
+        <div class="current">0:00</div>
+        <div class="divider">/</div>
+        <div class="length"></div>
       </div>
     </div>
-    <div class="time">
-      <div class="current">0:00</div>
-      <div class="divider">/</div>
-      <div class="length"></div>
+    <div class="timeline">
+      <div class="progress"></div>
     </div>
   </div>
-  <div class="timeline">
-    <div class="progress"></div>
+  <div class="audio-player" data-song="https://ia800905.us.archive.org/19/items/FREE_background_music_dhalius/backsound.mp3">
+    <div class="controls">
+      <div class="info">
+        <div class="play-container">
+          <div class="toggle-play play"></div>
+        </div>
+        <div class="trackinfo">
+          <div class="name">Music Song</div>
+          <div class="subtitle">This is subtitle</div>
+        </div>
+      </div>
+      <div class="time">
+        <div class="current">0:00</div>
+        <div class="divider">/</div>
+        <div class="length"></div>
+      </div>
+    </div>
+    <div class="timeline">
+      <div class="progress"></div>
+    </div>
   </div>
-</div>
   <script  src="./script.js"></script>
 
 </body>
